--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Jitsi Desktop Streamer",
+  "name": "Qindel Desktop Streamer",
   "description": "A simple extension that allows you to stream your desktop into meetings with Jitsi Meet and Jitsi Videobridge.",
   "version": "0.1.6",
   "minimum_chrome_version": "34",
@@ -18,7 +18,7 @@
   ],
   "externally_connectable": {
       "matches": [
-          "*://meet.jit.si/*"
+          "*://*.qindel.com/*"
       ]
   }
 }
